 - properly parse teacher names on broadcast
 - l18n fixes on russian
 - when sending files to student, give an option between saving then or opening directly

0.3.1:
 - properly open files and links on windows
 - simplify installation of icons

0.3:
 - simplify win32 packaging
 - new icons
 - implement event logging
 - fix username on win32
 - some fixes for windows placement on win32 platform
 - fix hanging on win32 while showing student screen
 - support long student names and other info in tooltips
 - localization fixes
 - allow sharing a student screen with other students
 - allow to have multiple multicast screen senders in the lab

0.2:
 - reduce number of imported packages
 - changed installation procedure to non-rpm-specific
 - implemented cross-platform notification, even in cases where
   notification-daemon is missing
 - add debian/ubuntu package
 - add windows installer
 - make shutdown work on windows
 - improve shutdown on Linux (should work when /usr/bin/poweroff is controlled
   by consolehelper)

0.1:
 - support multi-seat configurations and multiple clients per machine
 - allow to send custom messages to teacher
 - implemented teacher selection
 - do not allow student to disconnect from teacher while in class
 - i18n: new localization: Russian
 - allow teacher to remove and re-add students from/to class
 - allow teacher to see when students change names
 - display students screen on global view
 - allow to send actions to individual students
 - implemented class shutdown
 - ceiling scaling values to avoid "wireframes" in weird resolutions

0.0.4:
 - properly close file selection dialog
 - implemented automatic screen sharing when in fullscreen mode

0.0.3:
 - implemented url sharing
 - implemented file sharing

0.0.2:
 - implement raise hand functionality
 - implement popup menus on teacher
 - support viewing student screens

0.0.1:
 - initial version
 - support screen sharing and screen locking
 - broadcast-based teacher discovery